--- a/src/style/style.css
+++ b/src/style/style.css
@@ -95,7 +95,7 @@
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
   padding-top: 20px;
-  height: auto;
+  height: 100vh;
   /* overflow: auto; */
   direction: rtl;
 
@@ -432,8 +432,8 @@ select {
 
 @media screen and (max-width: 1250px) {
   .sidebar-menu-wrapper .sidebar-menu-item {
-    margin-left: 0px;
-    margin-right: 0px;
+    margin-left: 0;
+    margin-right: 0;
     display: flex;
   }
 }
@@ -727,7 +727,6 @@ p {
 @media only screen and (min-width: 576px) {
   .modal-dialog {
     max-width: 768px !important;
-    max-height: auto;
     margin: 1.75rem auto;
   }
 }
