--- a/src/style/style.css
+++ b/src/style/style.css
@@ -78,6 +78,12 @@ input[type=file]::file-selector-button {
 
 /* scrolbar END */
 
+::placeholder {
+    color: blanchedalmond;
+    font-size: 18px;
+    font-weight: 400;
+}
+
 .page-title h1,
 .page-title h3 {
     float: left;
